<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APNS Demo</string>
    <string name="action_settings">Settings</string>
    
    <string name="status_verifying">Verifying connection…</string>
    <string name="status_connected">Connected!</string>
    <string name="status_not_connected">Not Connected!</string>
    
    <string name="button_register">Register Device</string>
    <string name="button_verify">Verify Registration</string>
    <string name="button_cancel">Cancel Registration</string>
    <string name="button_fetch_alerts">Fetch Alert Summaries</string>
    
    <string name="heading_alert_summaries">Alert Summaries</string>
    <string name="alert_summaries_placeholder">Summaries will appear here once fetched…</string>
    
    <string name="heading_alert_details">Alert Details</string>
    <string name="heading_all">All Active Alert Details</string>
    <string name="heading_nearby">Nearby Alert Details</string>
    
    <string name="label_headline">Headline:</string>
    <string name="label_description">Description:</string>
    <string name="label_sent">Sent:</string>
    <string name="label_expires">Expires:</string>
    <string name="label_event">Event:</string>
    <string name="label_location">Location:</string>

    <string name="map_return">Return</string>
    <string name="map_nearbyAlerts">Show Nearby Alerts</string>
    <string name="map_allAlerts">Show All Active Alerts</string>
    <string name="map_mapView">Map View</string>
    <string name="map_earthView">Earth View</string>
    <string name="map_button">Map</string>
    <string name="map_home">Home</string>
    
<!-- Everything Below
Copyright 2013 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

 <string name="add_geofences_result_success">        Add Geofences: Success GeofenceRequestIds=%1$s</string>
 <string name="add_geofences_result_failure">        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s</string>
 <string name="add_geofences_already_requested_error">        Can\'t add geofences, previous request hasn\'t finished.</string>
 <string name="connected">Client connected</string>
 <string name="connection_failed">Connection failed</string>
 <string name="connection_error_code">Connection failure error code: %1$d</string>
 <string name="connection_error_disabled">Google Play services is disabled</string>
 <string name="connection_error_internal">An internal error occurred</string>
 <string name="connection_error_invalid">
     The version of Google Play services on this device is not authentic
 </string>
 <string name="connection_error_invalid_account">The specified account name is invalid</string>
 <string name="connection_error_license_check_failed">
     The app is not licensed to the user
 </string>
 <string name="connection_error_message">Connection failure error message: %1$s</string>
 <string name="connection_error_misconfigured">The application is misconfigured</string>
 <string name="connection_error_missing">Google Play services is missing</string>
 <string name="connection_error_needs_resolution">Additional resolution is required</string>
 <string name="connection_error_network">A network error occurred</string>
 <string name="connection_error_outdated">Google Play services is out of date</string>
 <string name="connection_error_sign_in_required">The user is not signed in</string>
 <string name="connection_error_unknown">An unknown error occurred</string>
 <string name="disconnected">Client disconnected</string>
 <string name="geofence_input_error_missing">Missing value</string>
 <string name="geofence_input_error_latitude_invalid">        Invalid latitude(s). Must be in the range -90 to 90 degrees</string>
 <string name="geofence_input_error_longitude_invalid">        Invalid longitude(s). Must be in the range -180 to 180 degrees</string>
 <string name="geofence_input_error_radius_invalid">        Invalid radius(s). Must be 1 meter or greater.</string>
 <string name="geofence_transition_entered">Entered</string>
 <string name="geofence_transition_error_detail">        Geofence transition error, code %1$d message %2$s.</string>
 <string name="geofence_transition_exited">Exited</string>
 <string name="geofence_transition_invalid_type">        Geofence transition error. Invalid type %1$d in geofences %2$s</string>
 <string name="geofence_transition_notification_text">        Click notification to return to app</string>
 <string name="geofence_transition_notification_title">        %1$s geofence(s) %2$s</string>
 <string name="geofence_transition_unknown">Unknown transition</string>
 <string name="invalid_action">Invalid action received. See error log for details.</string>
 <string name="invalid_action_detail">Invalid action %1$s received.</string>
 <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
 <string name="latitude_error_message">        Latitude should be in the range -90 to 90 degrees</string>
 <string name="longitude_error_message">        Longitude should be in the range -180 to 180 degrees</string>
 <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
 <string name="play_services_available">Location Services is available</string>
 <string name="radius_error_message">Radius must be greater than or equal to 0</string>
 <string name="register_geofence">Register geofence</string>
 <string name="remove_geofences_id_failure">        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s</string>
 <string name="remove_geofences_already_requested_error">        Can\'t remove geofences, previous request hasn\'t finished.</string>
 <string name="remove_geofences_id_success">        Removing geofences by request ids succeeded: request ids: %1$s</string>
 <string name="remove_geofences_intent_failure">        Removing all geofences failed: error code %1$d</string>
 <string name="remove_geofences_intent_success">        Removing all geofences succeeded.</string>
 <string name="transition_entered">entered</string>
 <string name="transition_exited">exited</string>
 <string name="transition_unknown">unknown</string>
 <string name="unknown">--Unknown--</string>
 <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>

 <!-- Number patterns -->
 <string name="lat_lng_pattern">* ###.00000000;* -###.00000000</string>
 <string name="radius_pattern">* #.0000</string>

 <!-- For SendMockLocation and LocatioUtils -->
<!--     <string name="app_name">Mock Location Tester</string> -->
<!--     <string name="action_settings">Settings</string> -->
    <string name="manage_mock_testing_banner">Manage mock location testing</string>
    <string name="one_run_button_text">Run once</string>
    <string name="location_test_finish">Test run finished</string>
    <string name="app_status_label">App status:</string>
    <string name="connection_status_label">Connection status:</string>
    <string name="unknown_string_value">--unknown--</string>
    <string name="testing_started">Location testing started</string>
    <!-- Latitude, longitude format -->
    <string name="latlng">%1$.8f, %2$.8f</string>
<!--     <string name="disconnected">Client disconnected</string> -->
<!--     <string name="connected">Client connected</string> -->
    <string name="connection_failure">Client connection failed, error code %1$d</string>
    <string name="run_continuous_button_text">Run continuously</string>
    <string name="label_latlng">Lat/Long:</string>
    <string name="label_elapsed_time">Elapsed time:</string>
    <string name="label_clock_time">Clock time:</string>
    <string name="label_accuracy">Accuracy:</string>
    <string name="elapsed_time">%1$,d seconds since boot</string>
    <string name="clock_time">yyyy_MM_dd kk:mm UTCZ</string>
    <string name="accuracy">%1$.2f</string>
    <string name="stop_test_button_text">Stop test</string>
    <string name="pause_entry_label">Pause before test (secs): </string>
    <string name="send_entry_label">Send interval (secs):</string>
    <string name="pause_interval_empty">No value supplied for pause interval</string>
    <string name="pause_interval_not_positive">Pause interval must be greater than 0</string>
    <string name="send_entry_empty">No value supplied for send interval</string>
    <string name="send_interval_not_positive">Send interval must be greater than 0</string>
    <string name="not_continuous_test">Stop test invalid; not in continuous test</string>
    <string name="notification_title_test_start">Mock Location Testing</string>
    <string name="notification_content_test_start">Starting test</string>
    <string name="notification_content_test_running">Test running</string>
    <string name="notification_content_test_stop">Test stopped</string>
    <string name="invalid_broadcast_code">Received invalid broadcast code.</string>
    <string name="test_interrupted">Continuous testing interrupted by user.</string>
    <string name="no_service">The test service is not running</string>
    <string name="stop_service">Sent request to stop testing</string>
 
</resources>
