<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="#dbd8bc"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/indicator_verifying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:text="@string/status_verifying"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/indicator_connected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:text="@string/status_connected"
            android:textStyle="bold"
            android:textColor="#00aa00"
            android:textSize="18sp" />
        
        <TextView
            android:id="@+id/indicator_disconnected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:text="@string/status_not_connected"
            android:textStyle="bold"
            android:textColor="#990000"
            android:textSize="16sp" />        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_register" />

        <Button
            android:id="@+id/button_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_verify" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/button_fetch_alerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_fetch_alerts" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/heading_alert_summaries"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/alert_summaries_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_summaries_placeholder" />
        
        <ListView 
            android:id="@+id/alert_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
        
<!--         <fragment android:name="edu.vt.alerts.android.library.demo.MapActivity" -->
<!--             android:id="@+id/mapFragment" -->
<!--             android:layout_height="match_parent" /> -->
        
    </LinearLayout>

</LinearLayout>
